unpackaged/main/default/objects/litify_pm__Role_View_Related_List__mdt/litify_pm__Role_View_Related_List__mdt.object-meta.xml
<CustomObject>
    <label>Role View Related List</label>
    <pluralLabel>Role View Related Lists</pluralLabel>
</CustomObject>