unpackaged/main/default/objects/litify_pm__Role_View_Related_List__mdt/fields/litify_pm__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Display_Order__c</fullName>
    <description>Controls the display of the related lists on a Role Detail Record</description>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>