unpackaged/main/default/objects/litify_pm__Role_View_Related_List__mdt/fields/litify_pm__Field_1__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Field_1__c</fullName>
    <label>Field 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>