unpackaged/main/default/objects/litify_pm__Role_View_Related_List__mdt/fields/litify_pm__Field_2__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Field_2__c</fullName>
    <label>Field 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>