unpackaged/main/default/objects/litify_pm__Role_View_Related_List__mdt/fields/litify_pm__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>