unpackaged/main/default/objects/litify_pm__Role_View_Related_List__mdt/fields/litify_pm__Name_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Name_Field__c</fullName>
    <label>Name Field</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>